# math-solver-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: graph_config.yml  prompts.yml
docs/: API.md  OPERATIONS.md
src/: __init__.py  main.py
src/agents/: __init__.py  graph.py  state.py
src/api/: __init__.py  runtime.py  server.py
src/llm/: __init__.py  client.py
src/nodes/: __init__.py  analyzer.py  converter.py  solver.py  verifier.py
src/tools/: __init__.py  calculator.py  ocr.py  plotter.py  utils.py
src/ui/: __init__.py  api_client.py  chainlit_app.py  streamlit_app.py
src/utils/: __init__.py  config_loader.py  doc_generator.py  exporters.py  logger.py
tests/integration/: test_agent_flow.py  test_busy_visibility.py  test_specialized.py  test_timeout_isolation.py
tests/mocks/: mock_llm_responses.py
tests/unit/: test_analyzer.py  test_api_server.py  test_calculator.py  test_chainlit_render.py  test_converter.py  test_doc_generator.py  test_exporters.py  test_graph_checkpoint.py  test_job_store.py  test_llm_client.py  test_ocr_tool.py  test_prompts_config.py  test_runtime_admission.py  test_solver.py  test_tools_utils.py  test_ui_client.py  test_verifier.py
