[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math-solver-agent"
version = "0.1.0"
description = "Enterprise-grade modular agent for advanced math problem solving"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "MathSolverAgent Team" }]
dependencies = [
  "PyYAML>=6.0",
  "pydantic>=2.7",
  "sympy>=1.12",
  "langchain>=0.2",
  "langchain-community>=0.2",
  "langchain-nvidia-ai-endpoints>=0.3",
  "langgraph>=0.2",
  "python-dotenv>=1.0",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "matplotlib>=3.8",
  "streamlit>=1.38"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27"
]

[project.scripts]
math-solver-agent = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
